--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <title>Country Info App</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
 </head>
 
@@ -15,7 +16,7 @@
     </header>
     <div class="container">
         <div class="search_info">
-            <input id="find" type="text" placeholder="search">
+            <input id="find" type="text" placeholder="Your country...">
             <input type="submit" value="Get Info">
         </div>
     </div>
@@ -31,6 +32,7 @@
             <p class="population"></p>
             <p class="language"></p>
             <p class="currency"></p>
+            <p class="currency_name"></p>
         </div>
     </div>
     <div class="container">
@@ -43,6 +45,12 @@
         <div class="map">
         </div>
     </div>
+
+    <footer class="ending">
+        <h3>Created by Monika Wojciechowska</h3>
+    </footer>
+
+
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbkrOH4VaFv1z8f39ke_fyNGYUcRHBjKs">
     </script>
